<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lesson41_6">

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_intro"
        android:text="@string/intro_text"
        android:textSize="@dimen/intro_size" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textIntro"
        android:padding="@dimen/padding_intro"
        android:text="@string/choose_dessert" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_below="@id/choose_dessert"
        android:contentDescription="@string/donut_description"
        android:padding="@dimen/padding_intro"
        android:src="@drawable/donut_circle"
        android:onClick="showDonutOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/donut_padding"
        android:layout_below="@id/choose_dessert"
        android:layout_toRightOf="@id/donut"
        android:text="@string/donut_description"/>
    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:padding="@dimen/padding_intro"
        android:layout_below="@id/donut"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:src="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/donut_padding"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:text="@string/ice_cream_sandwiches"/>
    <ImageView
        android:id="@+id/froyo"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:padding="@dimen/padding_intro"
        android:layout_below="@id/ice_cream"
        android:contentDescription="@string/froyo"
        android:src="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/donut_padding"
        android:layout_below="@id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:text="@string/froyo"/>

</RelativeLayout>